fix sidebar jumps

--- a/app/assets/stylesheets/sidebar.less
+++ b/app/assets/stylesheets/sidebar.less
@@ -170,6 +170,7 @@
 
 .SidebarWrapper {
   height: 100%;
+  max-width: 335px;
   background: #fff;
 }
 
